--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #171717;
             min-height: 100vh;
             color: #333;
         }
@@ -35,11 +35,18 @@
             position: sticky;
             top: 0;
             z-index: 100;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #171717;
             text-align: center;
             margin-bottom: 30px;
             padding: 20px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(255,255,255,0.1);
+            width: 100%;
+        }
+
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
         h1 {
@@ -59,16 +66,16 @@
             width: 100%;
             padding: 20px 25px;
             font-size: 1.5rem;
-            border: none;
+            border: 2px solid white;
             border-radius: 50px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+            box-shadow: 0 8px 25px rgba(255,255,255,0.2);
             background: white;
             outline: none;
             transition: box-shadow 0.3s ease;
         }
 
         #searchBar:focus {
-            box-shadow: 0 12px 35px rgba(0,0,0,0.3);
+            box-shadow: 0 12px 35px rgba(255,255,255,0.3);
         }
 
         .content {
@@ -101,7 +108,8 @@
             justify-content: flex-start;
             text-decoration: none;
             color: #333;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 25px rgba(255,255,255,0.15);
+            border: 2px solid white;
             transition: all 0.3s ease;
             cursor: pointer;
             overflow: hidden;
@@ -113,12 +121,14 @@
         }
 
         .link-item.add-button {
-            background: linear-gradient(135deg, #4CAF50, #45a049);
+            background: #2e7d32;
             color: white;
+            border: 2px solid white;
         }
 
         .link-item.add-button:hover {
-            background: linear-gradient(135deg, #45a049, #3d8b40);
+            background: #1b5e20;
+            border: 2px solid #cccccc;
         }
 
         .icon {
@@ -194,22 +204,26 @@
 
         .hover-text {
             position: absolute;
-            top: 50%;
+            top: 30%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 2.4rem;
+            font-size: 1.8rem;
             font-weight: bold;
             text-align: center;
             opacity: 0;
             transition: opacity 0.3s ease;
             z-index: 15;
-            padding: 10% 10% 25% 10%;
-            width: 100%;
-            height: 100%;
+            padding: 5%;
+            width: 90%;
+            height: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             line-height: 1.1;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
+            box-sizing: border-box;
         }
 
         .link-item:hover .hover-text {
@@ -374,13 +388,16 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
+    <div class="header">
+        <div class="header-content">
             <h1>Christers Hemsida</h1>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Sök efter en webbsida...">
             </div>
         </div>
+    </div>
+    
+    <div class="container">
 
         <div class="content">
             <div class="grid-container">
